--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,9 @@ django = "^5.0.6"
 ruff = "^0.4.10"
 pytest = "^8.2.2"
 pytest-django = "^4.8.0"
+flake8 = "^7.1.0"
+black = "^24.4.2"
+pre-commit = "^3.7.1"
 
 [build-system]
 requires = ["poetry-core"]
